# meteor

./: .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt
cmake/: toolchain-t20.cmake  toolchain-t31.cmake
docs/: README.md
include/meteor/: capture.h  config.h  detector.h  event.h  event_push.h  ff_writer.h  framesource.h  ftp.h  hough.h  isp.h  isp_tuning.h  ivs.h  ivs_monitor.h  jpeg.h  log.h  meteor_config.h  meteor_module.h  stacker.h  system.h
scripts/: analyze.sh  cameras.json  deploy_binaries.sh  deploy_firmware.sh  detect_sensors.sh  nightsky.sh
server/: config.yaml  install_astap.sh  nightcam_review.py  receiver.py  requirements.txt
src/: astrostack.c  capture.c  config.c  detector.c  detector_main.c  event.c  event_push.c  ff_writer.c  framesource.c  ftp.c  hough.c  isp.c  isp_tuning.c  ivs.c  ivs_monitor.c  jpeg.c  log.c  main.c  meteor_module.c  nightcam_main.c  stacker.c  system.c
